# CoIFNet

./: .envrc  .gitignore  LICENSE  README.md  README1.md  main.py  pyproject.toml
conf/: conf.yaml
conf/dataset/: etth1.yaml  etth2.yaml  ettm1.yaml  ettm2.yaml  exchange_rate.yaml  weather.yaml
conf/model/: CoIFNet.yaml  PatchTST.yaml  agcrn.yaml  biatcgnet.yaml  brits.yaml  dlinear.yaml  gpt4ts.yaml  iTransformer.yaml  mtgnn.yaml  saits.yaml  stid.yaml  timellm.yaml
dataset/: __init__.py  base.py  custom.py  ett.py
dataset/mask/: __init__.py  block_missing.py  mar.py
model/: CoIFNet.py  CoIFNetTask.py  ImputeTask.py  MaskTask.py  RevIN.py  RevON.py  __init__.py  attend.py  base.py
trainer/: engine.py  oneStage.py
utils/: logger.py  metric.py  scaler.py  tools.py
